@@ -59,10 +59,10 @@ This Work includes contributions authored by David E. Jones, not as a
         </container>
         <container><label text="Find '${entityName}' Entity Value" type="h3"/></container>
         <form-list name="ListEntityValue" list="entityValueList" transition="listSubmit" multi="false" dynamic="true">
-            <auto-fields-entity entity-name="${entityName}" field-type="display"/>
             <field name="entityName"><default-field><hidden/></default-field></field>
             <field name="edit"><default-field title="Edit"><submit/></default-field></field>
             <field name="delete"><default-field title="Delete"><submit/></default-field></field>
+            <auto-fields-entity entity-name="${entityName}" field-type="display"/>
         </form-list>
     </widgets>
 </screen>
